data/derived/sp14/progs/unify/prog0014.ml.out
Characters 83-87:
  if List.hd temp >= 10
             ^^^^
Error: This expression has type int * int
       but an expression was expected of type 'a list
